@@ -1,3 +1,7 @@
+2003-10-03  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* drawing.c: Fixed the background colour problem.
+
 2003-10-02  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* drawing.c
